updated resources links in html template

--- a/template.html
+++ b/template.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Drishti</title>
 		<meta charset="utf-8">
-		<meta name="author" content="Martijn van de Rijdt (Aid Web Solutions) &amp; Modi Research Group">
+		<meta name="author" content="Martijn van de Rijdt (Enketo LLC) &amp; Modi Research Group">
 		<meta name="robots" content="noindex">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="apple-mobile-web-app-capable" content="yes">
@@ -11,12 +11,14 @@
 		<link href="css/drishti.css" media="all" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="js/libraries-all-min.js"></script>
 		<script type="text/javascript" src="js/webform-drishti-all-min.js"></script>
-<!--*	<script type="text/javascript" src="js/helpers.js"></script>
-	*	<script type="text/javascript" src="js/gui.js"></script>
-	*	<script type="text/javascript" src="js/storage_drishti.js"></script>
-	*	<script type="text/javascript" src="js/form.js"></script>
-	*	<script type="text/javascript" src="js/widgets.js"></script>
-		<script type="text/javascript" src="js/webform_drishti.js"></script>-->
+<!--		
+		<script type="text/javascript" src="src/enketo-core/src/js/helpers.js"></script>
+		<script type="text/javascript" src="src/js/gui.js"></script>
+		<script type="text/javascript" src="src/js/storage-dristhi.js"></script>
+		<script type="text/javascript" src="src/enketo-core/src/js/form.js"></script>
+		<script type="text/javascript" src="src/enketo-core/src/js/widgets.js"></script>
+		<script type="text/javascript" src="src/js/webform-dristhi.js"></script>
+-->
 <!--	*** mocks to run statically in browser *** -->
 
 		<script type="text/javascript" src="mocks/transforms.mock.js"></script>
