--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include library files here... -->
-  <script type="text/javascript" src="../lib/jquery.min.js"></script>
+  <script type="text/javascript" src="../lib/enketo-core/lib/jquery.min.js"></script>
 
   <!-- include mock files here ... -->
   <script type="text/javascript" src="mocks/transform.mock.js"></script>
